--- a/narrativas/index.html
+++ b/narrativas/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Isa</p>
+        <p>Desenvolvido por Nathy</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
